# MPC-Benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BroadcastComm/: BCast.cbp  BCast.cpp  BCast.h  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp  run_protocol.sh
ExampleProtocol/: CMakeLists.txt  ExampleProtocol.cpp  ExampleProtocol.h  ExampleUdp.cpp  ExampleUdp.h  Parties  main.cpp  run_protocol.sh
GMW/: CBitVector.cpp  CBitVector.h  CMakeLists.txt  Circuit.cpp  Circuit.h  GMWParty.cpp  GMWParty.h  MPCCommunication.cpp  MPCCommunication.h  NigelAes.txt  NigelAes10Parties.txt  NigelAes3Parties.txt  NigelAes4Parties.txt  NigelAes50Parties.txt  NigelAes80Parties  OT.cpp  OT.hpp  README  README.md  inputs  main.cpp  midCircuit  parties.conf  run_all.sh  run_protocol.sh  smallCircuit
LowCostConstantRoundMPC/: CMakeLists.txt  NigelAes3Parties.txt  NigelAes6Parties.txt  Parties  main.cpp  runTests_party1  run_protocol.sh  smallCircuit
LowCostConstantRoundMPC/include/: Circuit.hpp  MPCCommunication.hpp  Party.hpp  TinyOT.hpp  Utils.hpp
LowCostConstantRoundMPC/src/: Circuit.cpp  MPCCommunication.cpp  Party.cpp  TinyOT.cpp  Utils.cpp
LowCostConstantRoundShortKeysMPC/: AES_splitters_scapi.txt  AES_splitters_scapi_4Parties.txt  AES_splitters_scapi_5Parties.txt  CMakeLists.txt  Mult32Inputs0.txt  Mult32Inputs1.txt  Mult32_splitters_scapi_1000Parties.txt  Mult32_splitters_scapi_100Parties.txt  Mult32_splitters_scapi_10Parties.txt  Mult32_splitters_scapi_15Parties.txt  Mult32_splitters_scapi_200Parties.txt  Mult32_splitters_scapi_20Parties.txt  Mult32_splitters_scapi_300Parties.txt  Mult32_splitters_scapi_30Parties.txt  Mult32_splitters_scapi_400Parties.txt  Mult32_splitters_scapi_40Parties.txt  Mult32_splitters_scapi_500Parties.txt  Mult32_splitters_scapi_50Parties.txt  Mult32_splitters_scapi_600Parties.txt  Mult32_splitters_scapi_60Parties.txt  Mult32_splitters_scapi_700Parties.txt  Mult32_splitters_scapi_70Parties.txt  Mult32_splitters_scapi_800Parties.txt  Mult32_splitters_scapi_80Parties.txt  Mult32_splitters_scapi_900Parties.txt  Mult32_splitters_scapi_90Parties.txt  NigelAes2Parties.txt  NigelAes4Parties.txt  Parties  README  Sha256Inputs0.txt  Sha256Inputs1.txt  main.cpp  run_protocol.sh
LowCostConstantRoundShortKeysMPC/include/: Circuit.hpp  MPCCommunication.hpp  Party.hpp  Utils.hpp
LowCostConstantRoundShortKeysMPC/src/: Circuit.cpp  MPCCommunication.cpp  Party.cpp  Utils.cpp
MPCHonestMajority/: .gitignore  ArythmeticStatistics1PairsAnd4SamplesFor10Parties.txt  CMakeLists.txt  DNHonestMult.h  GRRHonestMult.h  HonestMultAbstract.h  ProtocolParty.h  ProtocolTimer.h  README.md  TemplateField.cpp  TemplateField.h  ZpKaratsubaElement.h  inputs333.txt  main.cpp  run_protocol.sh
MPCHonestMajorityNoTriples/: CMakeLists.txt  HashAbstract.h  Parties.txt  ProtocolParty.h  ProtocolTimer.cpp  ProtocolTimer.h  README.md  TemplateField.cpp  TemplateField.h  ZpKaratsubaElement.cpp  ZpKaratsubaElement.h  main.cpp  run_protocol.sh  run_protocol_no_party1.sh
MaliciousYaoBatch/apps/OfflineP1/: AppOfflineP1.cpp  OfflineP1.vcxproj  OfflineP1.vcxproj.filters  README  makefile
MaliciousYaoBatch/apps/OfflineP2/: AppOfflineP2.cpp  OfflineP2.vcxproj  OfflineP2.vcxproj.filters  README  makefile
MaliciousYaoBatch/apps/OnlineP1/: AppOnlineP1.cpp  OnlineP1.vcxproj  OnlineP1.vcxproj.filters  README  makefile
MaliciousYaoBatch/apps/OnlineP2/: AppOnlineP2.cpp  OnlineP2.vcxproj  OnlineP2.vcxproj.filters  README  makefile
MaliciousYaoBatch/lib/: Makefile  MaliciousYao.vcxproj  MaliciousYao.vcxproj.filters  README
MaliciousYaoBatch/lib/assets/circuits/ADD/: ADDPartyOneInputs.txt  (+1 more)
MaliciousYaoBatch/lib/assets/conf/: PartiesConfig.txt
MaliciousYaoBatch/lib/include/CommitmentWithZkProofOfDifference/: CmtWithDifferenceCommitter.hpp  CmtWithDifferenceParty.hpp  CmtWithDifferenceReceiver.hpp  DifferenceCommitmentCommitterBundle.hpp  DifferenceCommitmentReceiverBundle.hpp  ProveDiff.hpp  SC.hpp  SCom.hpp
MaliciousYaoBatch/lib/include/common/: BinaryUtils.hpp  CommonMaliciousYao.hpp  KeyUtils.hpp  LogTimer.hpp  aligned_allocator.hpp  aligned_allocator_no_destructor.hpp
MaliciousYaoBatch/lib/include/primitives/: CheatingRecoveryCircuitCreator.hpp  CircuitInput.hpp  CircuitOutput.hpp  CommunicationConfig.hpp  CryptoPrimitives.hpp  CutAndChooseSelection.hpp  ExecutionParameters.hpp  KProbeResistantMatrix.hpp  SeededRandomnessProvider.hpp  UnlockP1InputCircuitCreator.hpp
MaliciousYaoBatch/lib/src/CommitmentWithZkProofOfDifference/: CmtWithDifferenceCommitter.cpp  CmtWithDifferenceParty.cpp  CmtWithDifferenceReceiver.cpp  DifferenceCommitmentCommitterBundle.cpp  ProveDiff.cpp  SC.cpp  SCom.cpp
MaliciousYaoBatch/lib/src/common/: BinaryUtils.cpp  CommonMaliciousYao.cpp  KeyUtils.cpp
MaliciousYaoBatch/lib/src/primitives/: CheatingRecoveryCircuitCreator.cpp  CircuitInput.cpp  CommunicationConfig.cpp  CryptoPrimitives.cpp  CutAndChooseSelection.cpp  KProbeResistantMatrix.cpp  SeededRandomnessProvider.cpp  UnlockP1InputCircuitCreator.cpp
MaliciousYaoSingleExecution/: CMakeLists.txt  Makefile  MaliciousYaoSingleExecution  README  README.md  YaoSEParty.cpp  YaoSEParty.h  install_emp.sh  main.cpp
ReplicatedSecretSharing3Parties/: AES_PRG.cpp  AES_PRG.h  ArithmeticCircuit.cpp  ArithmeticCircuit.h  CMakeCache.txt  CMakeLists.txt  HIM.cpp  HIM.h  Protocol.cpp  Protocol.h  ProtocolTimer.cpp  ProtocolTimer.h  ReplicatedSecretSharing3Parties.cbp  TGate.h  TemplateField.cpp  TemplateField.h  VDM.cpp  VDM.h  ZpGMPElement.cpp  ZpGMPElement.h  ZpKaratsubaElement.h  ZpMersenneIntElement.cpp  ZpMersenneIntElement.h  ZpMersenneLongElement.cpp  ZpMersenneLongElement.h  cmake_install.cmake  main.cpp  run_protocol.sh
ReplicatedSecretSharing3PartiesArithmetic/: CMakeLists.txt  HashAbstract.h  HashEncrypt.cpp  HashEncrypt.h  Parties.txt  ProtocolParty.cpp  ProtocolParty.h  ProtocolTimer.cpp  ProtocolTimer.h  README  inputs200000.txt  main.cpp  run_protocol.sh
SemiHonestYao/: .gitignore  App1.cpp  CMakeLists.txt  README.md  SemiHonestYao.cbp  YaoConfig.txt  YaoParties.cpp  YaoParties.hpp
(+48 files in other folders)
