cmake_minimum_required(VERSION 3.12)
project(MPC_Benchmark)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(ExampleProtocol)
add_subdirectory(GMW)
add_subdirectory(LowCostConstantRoundMPC)
add_subdirectory(MaliciousYaoSingleExecution)
add_subdirectory(MPCHonestMajority)
add_subdirectory(MPCHonestMajorityNoTriples)
add_subdirectory(ReplicatedSecretSharing3Parties)
add_subdirectory(ReplicatedSecretSharing3PartiesArithmetic)
add_subdirectory(SemiHonestYao)
